# gestion_nova

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: admin.py  clase.py  persona.py
models/: activities.py  payments.py  people.py  profiles.py  schools.py
